--- a/selfedu/women/templates/women/index.html
+++ b/selfedu/women/templates/women/index.html
@@ -11,8 +11,12 @@
     <div class="container header__container">
         <nav class="header__nav nav">
             <ul class="nav__list">
-                {% for item in menu %}
-                    <li class="nav__item">{{ item }}</li>
+                {% for route in menu %}
+                    <li class="nav__item">
+                        {% for path, description in route.items %}
+                            <a href="{% url path %}">{{ description }}</a>
+                        {% endfor %}
+                    </li>
                 {% endfor %}
             </ul>
         </nav>
@@ -20,7 +24,7 @@
 </header>
 <h1>{{ title }}</h1>
 <div class="app">
-
+    <a href="{% url 'post' 'sug_name' %}">Some address</a>
 </div>
 </body>
 </html>
