--- a/selfedu/women/templates/women/index.html
+++ b/selfedu/women/templates/women/index.html
@@ -1,30 +1,10 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ title }} | Women App</title>
-    <link rel="stylesheet" href="{% static '/css/style.css' %}">
-</head>
-<body>
-<header class="header">
-    <div class="container header__container">
-        <nav class="header__nav nav">
-            <ul class="nav__list">
-                {% for route in menu %}
-                    <li class="nav__item">
-                        {% for path, description in route.items %}
-                            <a href="{% url path %}">{{ description }}</a>
-                        {% endfor %}
-                    </li>
-                {% endfor %}
-            </ul>
-        </nav>
-    </div>
-</header>
+{% extends 'base.html' %}
+
+{% block content %}
+
 <h1>{{ title }}</h1>
 <div class="app">
     <a href="{% url 'post' 'sug_name' %}">Some address</a>
 </div>
-</body>
-</html>
+
+{% endblock %}
