feat: add published data

--- a/selfedu/women/templates/women/post.html
+++ b/selfedu/women/templates/women/post.html
@@ -6,4 +6,5 @@
         <div><img src="{{ post.photo.url }}" alt="{{ post.title }}" class="img-article-left"></div>
     {% endif %}
     {{ post.content|linebreaks }}
+    <p><a href="{% url 'home' %}">Back</a></p>
 {% endblock %}
