--- a/selfedu/women/templates/women/index.html
+++ b/selfedu/women/templates/women/index.html
@@ -6,14 +6,12 @@
     <div class="app">
         <ul class="list-articles">
             {% for post in posts %}
-                {% if post.is_published %}
-                    <li><h2>{{ p.title }}</h2></li>
-                    {% autoescape off %}
-                        {{ p.content|linebreaks|truncatewords:20 }}
-                    {% endautoescape %}
-                    <li class="clear"></li>
-                    <p class="link-read-post"><a href="{{ post.get_absolute_url }}">read post</a></p>
-                {% endif %}
+                <li><h2>{{ post.title }}</h2></li>
+                {% autoescape off %}
+                    {{ post.content|linebreaks|truncatewords:20 }}
+                {% endautoescape %}
+                <li class="clear"></li>
+                <p class="link-read-post"><a href="{{ post.get_absolute_url }}">read post</a></p>
             {% endfor %}
 
         </ul>
