--- a/selfedu/templates/base.html
+++ b/selfedu/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load women_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,6 +18,9 @@
         </div>
     </header>
     <div class="root__content">
+        <aside>
+            {% show_categories cat_selected %}
+        </aside>
         {% block content %}{% endblock %}
     </div>
     <footer class="footer">
